--- a/public/css/wedding.css
+++ b/public/css/wedding.css
@@ -1,7 +1,19 @@
-body {
-    font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+* {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    scroll-padding-top: 2rem;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --main-color: #fd4646;
+    --text-color: #171427;
+    --bg-color: #fff;
 }
 
 nav ul {
@@ -10,7 +22,7 @@ nav ul {
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 nav li {
@@ -35,112 +47,225 @@ nav a.active {
     color: #FFFFFF;
 }
 
-.services-section {
+img {
+    width: 100%;
+}
+
+body {
+    color: var(--text-color);
+}
+
+.container {
+    max-width: 1068px;
+    margin: auto;
+    width: 100%;
+}
+
+section {
+    padding: 4rem 0 3rem;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--bg-color);
+    box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
+    z-index: 100;
+}
+
+.nav {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    margin-top: 50px;
+    justify-content: space-between;
+    padding: 20px 0;
 }
 
-.service {
-    text-align: center;
+.logo {
+    font-size: 1.1rem;
+    color: var(--text-color);
+    font-weight: 400;
 }
 
-.service h2 {
-    margin-top: 10px;
-    font-size: 1.5rem;
-}
-
-.service img {
-    width: auto;
-    height: 300px;
-    border-radius: 20px;
-}
-
-.gambar-fotografi {
-    max-width: 100%;
-    max-height: 300px;
-    min-width: 150px;
-    min-height: 100px;
-}
-
-.service p {
-    font-size: 1.2rem;
-    margin-top: 10px;
-}
-
-.service button {
-    margin-top: 10px;
-    background-color: #9a031e;
-    color: #FFF;
-    padding: 10px 20px;
-    border-radius: 5px;
+#cart-icon {
+    font-size: 1.8rem;
     cursor: pointer;
 }
 
-.service button:hover {
-    background-color: #9a031e;
+
+/*kartu*/
+
+.cart {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 360px;
+    min-height: 100vh;
+    padding: 20px;
+    background: var(--bg-color);
+    box-shadow: -2px 0 4px hsl(0 4% 15% / 10%);
+    transition: 0.3s;
 }
 
-video {
+.cart.active {
+    right: 0;
+}
+
+.cart-title {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 2rem;
+}
+
+.cart-box {
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.cart-img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding: 10px;
+}
+
+.cart-content {
+    max-height: 450px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.detail-box {
+    display: grid;
+    row-gap: 0.5rem;
+}
+
+.cart-product-title {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+.cart-price {
+    font-weight: 500;
+}
+
+.cart-quantity {
+    border: 1px solid var(--text-color);
+    outline-color: var(--text-color);
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.cart-remove {
+    font-size: 24px;
+    color: var(--main-color);
+    cursor: pointer;
+}
+
+.total {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid var(--text-color);
+}
+
+.total-title {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.total-price {
+    margin-left: 0.5rem;
+}
+
+.btn-buy {
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.btn-buy:hover {
+    background: var(--text-color);
+}
+
+#close-cart {
+    position: absolute;
+    top: 1rem;
+    right: 0.8rem;
+    font-size: 2rem;
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
+}
+
+.section-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.shop {
+    margin-top: 2rem;
+}
+
+.shop-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100, auto));
+    gap: 1.5rem;
+}
+
+.product-box {
+    position: relative;
+}
+
+.product-img {
+    width: auto;
     max-width: 100%;
     height: auto;
-    border-radius: 4px;
+    max-height: 300px;
 }
 
-button {
-    background-color: #9a031e;
-    color: #ffffff;
-    border: none;
-    width: auto;
-    padding: 10px 20px;
-    border-radius: 4px;
+.product-box:hover {
+    padding: 10px;
+    transition: 0.4s;
+}
+
+.product.title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
+}
+
+.price {
+    font-weight: 500;
+}
+
+.add-cart {
+    position: absolute;
+    bottom: 0;
+    left: 200px;
+    background: var(--text-color);
+    color: var(--bg-color);
+    padding: 10px;
     cursor: pointer;
 }
 
-.btn btn-primary btn-block {
-    width: auto;
-}
-
-button:hover {
-    background-color: #9a031e;
-}
-
-#cart {
-    background-color: #ffffff;
-    margin: 20px;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-#cart h2 {
-    color: #333333;
-    margin-bottom: 10px;
-}
-
-#cart ul {
-    list-style: none;
-    padding: 0;
-}
-
-#cart ul li {
-    margin-bottom: 5px;
-}
-
-#cart p {
-    color: #777777;
-    margin-top: 10px;
-}
-
-#cart-total {
-    font-weight: bold;
-}
-
-#cart button {
-    background-color: #28a745;
-}
-
-#cart button:hover {
-    background-color: #1d8231;
+.add-cart:hover {
+    background: hsl(249, 32%, 17%);
 }
