--- a/public/css/wedding.css
+++ b/public/css/wedding.css
@@ -11,7 +11,7 @@
 }
 
 :root {
-    --main-color: #fd4646;
+    --main-color: #1A374D;
     --text-color: #171427;
     --bg-color: #fff;
 }
@@ -32,18 +32,18 @@ nav li {
 nav a {
     text-decoration: none;
     padding: 10px 20px;
-    border: 2px solid #092f57;
+    border: 2px solid #1A374D;
     border-radius: 4px;
     transition: background-color 0.3s, color 0.3s;
 }
 
 nav a:hover {
-    background-color: #9a031e;
+    background-color: #1A374D;
     color: #FFFFFF;
 }
 
 nav a.active {
-    background-color: #9a031e;
+    background-color: #1A374D;
     color: #FFFFFF;
 }
 
@@ -134,6 +134,26 @@ header {
     padding: 10px;
 }
 
+.product-box {
+    flex-basis: calc(50% - 0.5rem);
+    /*mejadi dua item setiap baris*/
+    position: relative;
+}
+
+.product-video {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 300px;
+}
+
+.product.title {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
+}
+
 .cart-content {
     max-height: 450px;
     overflow-y: scroll;
@@ -164,7 +184,7 @@ header {
 
 .cart-remove {
     font-size: 24px;
-    color: var(--main-color);
+    color: #fd4646;
     cursor: pointer;
 }
 
@@ -224,9 +244,10 @@ header {
 }
 
 .shop-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100, auto));
-    gap: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-between;
 }
 
 .product-box {
@@ -259,7 +280,7 @@ header {
 .add-cart {
     position: absolute;
     bottom: 0;
-    left: 200px;
+    left: 400px;
     background: var(--text-color);
     color: var(--bg-color);
     padding: 10px;
